datasets/dataset_txt/certbot/certbot_2372.txt
lazharichir commented on 24 Feb 2016
Hello guys,
Look at the below, I am trying to set it up.
bash-3.2$ ./letsencrypt-auto —help
“sudo” is not available, will use “su” for installation steps…
Sorry, I don’t know how to bootstrap Let’s Encrypt on your operating system!
You will need to bootstrap, configure virtualenv, and run a peep install manually.
Please see https://letsencrypt.readthedocs.org/en/latest/contributing.html#prerequisites
for more info.
Checking for new version…
./letsencrypt-auto: line 108: [: too many arguments
File “/tmp/tmp.jEueeZ1320/fetch.py”, line 57
except (HTTPError, IOError) as exc:
^
SyntaxError: invalid syntax
bash-3.2$
I am hosted on TSOHOST.COM on Apache -- any guess on what is going wrong here?